# KalmanFilterLibrary

./: .gitignore  CMakeLists.txt  README.md  build.sh  ekf_test.cpp  lkf_test.cpp  main.cpp  run.sh  ukf_test.cpp
docs/: Doxyfile
docs/html/: annotated.html  classKalmanFilter-members.html  classKalmanFilter.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_9117c3f6ee1d50f6b286045d485141c3.html  dir_a4eedae1391b55801b14e2a08c87ca49.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ce8ce699d6ee9f5233e3415eb69909f3.html  dir_ff86b140f425c7fd33d63d9b9653ff08.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/latex/: annotated.tex  classKalmanFilter.tex  refman.tex
include/: ekf.h  helper_functions.h  kalman_filter.h  lkf.h  scenarios.h  ukf.h
parameters/: plot_params.json
scenarios/: scenario1.json  scenario2.json
scripts/: helper_functions.py  plot_data.py  plot_scenario1.py  plot_scenario2.py
